[tool.poetry]
name = "decision-tree"
version = "0.0.1"
description = ""
authors = ["lionasp <lion.programmer@gmail.com>"]
readme = "README.md"
packages = [{include = "decision_tree"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
